--- a/MvcWebMusica2/MvcWebMusica2.csproj
+++ b/MvcWebMusica2/MvcWebMusica2.csproj
@@ -19,4 +19,12 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Views\Shared\Components\Artistas\Default.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Views\Shared\Components\Artistas\Default.cshtml" />
+  </ItemGroup>
+
 </Project>
