--- a/MvcWebMusica2/MvcWebMusica2.csproj
+++ b/MvcWebMusica2/MvcWebMusica2.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <Folder Include="Pages\Shared\Components\" />
+    <Folder Include="ViewModels\" />
   </ItemGroup>
 
   <ItemGroup>
